# gl-freetype

./: CMakeLists.txt  README.md
lib/FreeType2/: CMakeLists.txt
src/: main.cpp
